-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.6.0 Beta1
-
None
-
Pixel 3a 12.0
-
-
522621995 (dev), 8196f90ac (6.6), 0fc02b2fc (6.5)
-
2023wk28FOQtforAndroid
Steps to reproduce:
- Open the QML Camera app from examples of Qt 6.6.0 b1.
- Build and run the app
- Use the front camera and check the image displayed.
Expected: The image is displayed in the correct orientation.
Actual: The image is displayed upside down.
Reproducibility: 100%
- is cloned by
-
QTBUG-114659 [DeclarativeCamera] Zoom control is incorrectly positioned and does not work on Android
-
- Closed
-
- relates to
-
QTQAINFRA-5592
Qt Test Attack - Q2, 2023
-
- Open
-